@@ -12,8 +12,14 @@ namespace System
 
 namespace detail
 {
+/** \brief default strict-weak-ordering functor.
+ */
 struct DefaultSWO
 {
+  /** \brief less-then operator equivalent.
+   *  \param left  left argument for '<' opertaion.
+   *  \param right right argument for '<' opertaion.
+   */
   template<typename T>
   bool operator()(const T &left, const T &right) const
   {
@@ -21,6 +27,10 @@ struct DefaultSWO
   }
 }; // struct DefaultSWO
 
+/** \brief helper funciton swapping two elements.
+ *  \param e1 element to swap.
+ *  \param e2 element to swap with.
+ */
 template<typename T>
 inline void swapElements(T &e1, T &e2)
 {
@@ -31,7 +41,28 @@ inline void swapElements(T &e1, T &e2)
 } // namespace detail
 
 
-
+/** \brief small containers sorter.
+ *  \param begin iterator where sort should start.
+ *  \param end   iterator indicating end of sorted elements.
+ *  \param swo   strict-weak-ordering operator to be used.
+ *  \note sorting is stable.
+ *  \note iterators are required to be forward-iterators (but not required
+ *        to be random-access iterators).
+ *
+ *  implementation of std::sort<>() algorithm but dedicated to small and
+ *  very small data sets. usually algorithms that have good complexity
+ *  like O(n*ln(n)) does not behave well on small data sets. when
+ *  collection/array to be sorder is small it takes too much time to prepare
+ *  initial strucutres comparing to acctual sorting. so if we expect that
+ *  data set is small (few, few tens elements) it is beneficial to use simpler
+ *  algorithms that will sort data faster.
+ *
+ *  another advantage of simple algorithm provided here is using only forward
+ *  iterators, so one can sort not only vectors/arrays but lists as well.
+ *
+ *  current implementation uses improved bubble sort, but it may change in the
+ *  future to some other, fast-on-small-data sorting algorithm.
+ */
 template<typename TIterator, typename TStrictWeakOrdering>
 void sortSmall(TIterator begin, TIterator end, TStrictWeakOrdering swo)
 {
@@ -55,6 +86,16 @@ void sortSmall(TIterator begin, TIterator end, TStrictWeakOrdering swo)
   while(changed);
 }
 
+
+/** \brief small containers sorter.
+ *  \param begin iterator where sort should start.
+ *  \param end   iterator indicating end of sorted elements.
+ *  \note sorting is stable.
+ *  \note iterators are required to be forward-iterators (but not required
+ *        to be random-access iterators).
+ *
+ *  sorting algorithm version using default strict-weak-ordering operator.
+ */
 template<typename TIterator>
 void sortSmall(TIterator begin, TIterator end)
 {
